	PR c++/3187 	* cgraph.h (struct cgraph_node): Add same_body and same_body_alias 	fields. 	(cgraph_same_body_alias, cgraph_remove_same_body_alias): New 	prototypes. 	* cgraphunit.c (cgraph_expand_function, cgraph_emit_thunks, 	cgraph_materialize_all_clones): Handle same_body aliases. 	* cgraph.c (cgraph_allocate_node): New function. 	(cgraph_create_node): Use it. 	(cgraph_node_for_decl, cgraph_node, cgraph_get_node, 	cgraph_node_for_asm, cgraph_remove_node): Handle same_body aliases. 	(cgraph_same_body_alias, cgraph_remove_same_body_alias): New 	functions. 	* lto-cgraph.c (lto_output_node): Stream out same_body aliases. 	(input_node): Stream in same_body aliases. 	* lto-symtab.c (lto_cgraph_replace_node): Clear node pointers 	for same_body aliases. 	(lto_symtab_merge_cgraph_nodes_1): Handle same_body aliases.

* cp-tree.h (expand_or_defer_fn_1): New prototype.
	* decl2.c (cp_write_global_declarations): Mark as !DECL_EXTERNAL
	also all same_body aliases.
	* semantics.c (expand_or_defer_fn): Move most of the function
	except registering with cgraph to ...
	(expand_or_defer_fn_1): ... here.  New function.
	* optimize.c: Include cgraph.h.
	(maybe_clone_body): If in charge parm is not used and both base
	and complete clones are created and are not comdat, tell cgraph
	they have the same body.
	* Make-lang.in (cp/optimize.o): Depend on $(CGRAPH_H).

	* g++.dg/abi/mangle26.C: Also match *C2* definition.
	* g++.dg/abi/mangle27.C: Likewise.
	* g++.dg/abi/mangle28.C: Likewise.
	* g++.dg/abi/mangle29.C: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@154284 138bc75d-0d04-0410-961f-82ee72b054a4